--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -14,6 +14,13 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_12.app
       - name: Run Bluepill tests
         run: ./scripts/bluepill.sh instance_tests
+      - name: Capture xcresult files
+        uses: actions/upload-artifact@v2
+        with:
+          name: xcresults
+          path: build/**/*.xcresult
+          retension-days: 14
+
 
   # Second machine, runs BP tests and makes build
   build:
@@ -28,3 +35,9 @@ jobs:
         run: ./scripts/bluepill.sh runner_tests
       - name: Build and Package
         run: ./scripts/bluepill.sh build
+      - name: Capture xcresult files
+        uses: actions/upload-artifact@v2
+        with:
+          name: xcresults
+          path: build/**/*.xcresult
+          retension-days: 14
