--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,6 +19,14 @@ jobs:
       run: sudo xcode-select -s /Applications/Xcode_12.app
     - name: Run Bluepill tests
       run: ./scripts/bluepill.sh instance_tests
+    - name: Capture xcresult files
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: xcresults-bluepill-tests
+        path: build/**/*.xcresult
+        retention-days: 14
+
 
   # Second machine, runs BP tests and makes build
   build:
@@ -33,3 +41,10 @@ jobs:
       run: ./scripts/bluepill.sh runner_tests
     - name: Build and Package
       run: ./scripts/bluepill.sh build
+    - name: Capture xcresult files
+      if: ${{ always() }}
+      uses: actions/upload-artifact@v2
+      with:
+        name: xcresults-bp-test
+        path: build/**/*.xcresult
+        retention-days: 14
