[Not merging] disabling tests for shorter turnaround time
Added some more logging to diagnose the video recording test failures

--- a/bluepill/bluepill.xcodeproj/xcshareddata/xcschemes/bluepill.xcscheme
+++ b/bluepill/bluepill.xcodeproj/xcshareddata/xcschemes/bluepill.xcscheme
@@ -74,6 +74,47 @@
                BlueprintName = "bluepill-tests"
                ReferencedContainer = "container:bluepill.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "BPAppTests">
+               </Test>
+               <Test
+                  Identifier = "BPCLITests">
+               </Test>
+               <Test
+                  Identifier = "BPHTMLReportWriteTests">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testClonedSimulators">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testOneBPInstance">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testTwoBPInstances">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testTwoBPInstancesTestCaseFail">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testTwoBPInstancesWithTestPlanJson">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testTwoBPInstancesWithUITests">
+               </Test>
+               <Test
+                  Identifier = "BPIntegrationTests/testTwoBPInstancesWithXCTestRunFile">
+               </Test>
+               <Test
+                  Identifier = "BPPackerTests">
+               </Test>
+               <Test
+                  Identifier = "BPReportCollectorTests">
+               </Test>
+               <Test
+                  Identifier = "BPRunnerTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
