--- a/bp/bp.xcodeproj/xcshareddata/xcschemes/bp.xcscheme
+++ b/bp/bp.xcodeproj/xcshareddata/xcschemes/bp.xcscheme
@@ -46,6 +46,29 @@
                BlueprintName = "bp-tests"
                ReferencedContainer = "container:bp.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "BPConfigurationTests">
+               </Test>
+               <Test
+                  Identifier = "BPTreeParserTests">
+               </Test>
+               <Test
+                  Identifier = "BPUtilsTests">
+               </Test>
+               <Test
+                  Identifier = "BluepillTests">
+               </Test>
+               <Test
+                  Identifier = "RegexTests">
+               </Test>
+               <Test
+                  Identifier = "SimulatorHelperTests">
+               </Test>
+               <Test
+                  Identifier = "WaitTimerTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
